添加地图爬取相关类